...
  };

  if (dbLoading) {
    return (
      <MainScrollView
        headerImage="deck-bkg"
        headerTitle="Deck Builder"
      >
        <View style={{ flex: 1, justifyContent: "center", alignItems: "center", minHeight: 200 }}>
          <ActivityIndicator
            size="large"
            color={theme.colors.purple}
          />
...
