...
          {/* Card Types */}
          <View style={styles.cardDetailsContainer}>
            <ThemedText
              type="h3"
              style={styles.title}
            >
              Card Type
            </ThemedText>
            <ThemedText style={{ paddingBottom: 4 }}>
              <ThemedText
                fontWeight="bold"
                color={theme.colors.white}
              >
...
          {props.attacks && props.attacks.length > 0 && (
            <View style={styles.cardDetailsContainer}>
              <ThemedText
                type="h3"
                style={styles.title}
              >
                Attacks
              </ThemedText>
              {props.attacks.map((atk, index) => (
                <View
                  key={`attack-${atk.name}-${atk.id}`}
                  style={{
                    marginBottom: index === (props.attacks ?? []).length - 1 ? 0 : theme.padding.medium,
...
          {props.abilities && props.abilities.length > 0 && (
            <View style={styles.cardDetailsContainer}>
              <ThemedText
                type="h3"
                style={styles.title}
              >
                Abilities
              </ThemedText>
              {props.abilities.map((ability, index) => (
                <View
                  key={`ability-${ability.name}`}
                  style={{
                    marginBottom: index === (props.abilities ?? []).length - 1 ? 0 : theme.padding.medium,
...
            <>
              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Stats
                </ThemedText>

                <ThemedText style={{ paddingBottom: 4 }}>
                  <ThemedText
                    fontWeight="bold"
                    color={theme.colors.white}
...

              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Evolution
                </ThemedText>
                <ThemedText style={{ paddingBottom: 4 }}>
                  <ThemedText
                    fontWeight="bold"
                    color={theme.colors.white}
                  >
...

              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Weakness & Resistance
                </ThemedText>
                {(() => {
                  let weaknesses = parseJsonStringArray(props.weaknesses);
                  if (weaknesses.length > 0) {
                    return (
                      <ThemedText style={{ paddingBottom: 4 }}>
...

          <View style={styles.cardDetailsContainer}>
            <ThemedText
              type="h3"
              style={styles.title}
            >
              Card Set
            </ThemedText>
            {props.cardId && (
              <ThemedText style={{ paddingBottom: 4 }}>
                <ThemedText
                  fontWeight="bold"
                  color={theme.colors.white}
...
