...
                  alignItems: "center",
                  justifyContent: "space-between",
                  marginTop: theme.padding.small,
                  marginBottom: theme.padding.large,
                }}
              >
                <ThemedText type="h2">Cards ({cardDetails.length})</ThemedText>
              </View>
              <WatchlistThumbnailList
                cards={getCardsArray()}
                watchlistId={Number(watchlistId)}
                db={db}
                onCardsChanged={handleCardsChanged}
...
              visible={showModal}
              onClose={() => setShowModal(false)}
              onConfirm={handleConfirmDelete}
              buttonText="Delete"
              buttonType="main"
              buttonSize="large"
              onCancelText="Cancel"
              onCancel={() => setShowModal(false)}
            >
              <ThemedText
                type="h2"
                color={theme.colors.white}
                style={{ marginTop: theme.padding.small, marginBottom: theme.padding.medium, textAlign: "center" }}
...
