...

  return (
    <>
      <ThemedButton
        type="main"
        size="small"
        title="Add to Deck"
        onPress={() => setModalVisible(true)}
        accessibilityLabel="Add to Deck"
      />
      <ThemedModal
        visible={modalVisible}
        onClose={() => setModalVisible(false)}
...
